fix: dropdown z-index

--- a/src/assets/general.css
+++ b/src/assets/general.css
@@ -77,7 +77,7 @@
   min-width: 80px;
   border: 1px solid rgba(0, 0, 0, 0.15);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 100;
 }
 
 .dropdown:hover .dropdown-content {
